# excelclaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  sample_sales_pipeline.xlsx
app/: config.py  main.py  slack_notifier.py
app/agent/: excel_agent.py  excel_ops.py  prompts.py  sessions.py
app/whatsapp/: client.py  models.py  webhook.py
